--- a/style.css
+++ b/style.css
@@ -10,7 +10,7 @@ section {
   top: 0;
   /* background-clip: content-box; */
 
-  background-color: rgba(22, 77, 46, 0.798);
+  background-color: rgba(33, 59, 44, 0.949);
   background-repeat: no-repeat;
   background-blend-mode: darken;
   background-size: cover;
@@ -56,6 +56,8 @@ h1 {
   display: flex;
   gap: 1em;
   color: white;
+  /* align-items: center; */
+  
 }
 .dateTime div {
   display: flex;
@@ -96,14 +98,17 @@ button:hover {
     width: 90%;
   }
   h1 {
-    font-size: 20px;
+    font-size: 25px;
   }
   .button-cont{
     display: flex;
     flex-direction: column;
     row-gap: 0.5em;
   }
-  .dateTime p{
-    font-size: 10px;
+  .dateTime{
+    font-size: 16px;
+  }
+  p{
+    font-size: 1em;
   }
 }
