--- a/style.css
+++ b/style.css
@@ -18,7 +18,7 @@ section {
   display: flex;
   flex-direction: column;
   gap: 4em;
-  /* justify-content: center; */
+  justify-content: center;
   align-items: center;
 }
 
