--- a/style.css
+++ b/style.css
@@ -3,6 +3,9 @@
   margin: 0;
   box-sizing: border-box;
 }
+body{
+  font-family: Arial, Helvetica, sans-serif;
+}
 section {
   background-image: url("https://images.unsplash.com/photo-1641790176913-5b573e7ebacd?q=80&w=1471&auto=format&fit=crop&ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D");
   position: absolute;
