--- a/style.css
+++ b/style.css
@@ -3,7 +3,7 @@
   margin: 0;
   box-sizing: border-box;
 }
-body{
+body {
   font-family: Arial, Helvetica, sans-serif;
 }
 section {
@@ -49,7 +49,6 @@ section {
   justify-content: center;
   align-items: center;
   /* background: #000; */
-
 }
 .logo-cont img {
   width: 18em;
@@ -67,7 +66,6 @@ h1 {
   gap: 1em;
   color: white;
   /* align-items: center; */
-  
 }
 .dateTime div {
   display: flex;
@@ -91,14 +89,11 @@ input[type="email"] {
 #msgEl {
   /* background-color: #fff; */
   display: none;
-  margin:-1em 0 -1em 0;
-
+  margin: -1em 0 -1em 0;
 }
 
-
-
 button {
-   padding: 0.8em 1em;
+  padding: 0.8em 1em;
   font-size: 1em;
   background-color: #087722;
   color: #fff;
@@ -110,48 +105,59 @@ button {
 button:hover {
   background-color: #00b32d;
 }
-.loading-msg{
-  margin:-2em 0 -1em 0;
+.loading-msg {
+  margin: -2em 0 -1em 0;
   display: flex;
 }
 .loading-animation {
-    display: none;
-    width: 20px;
-    height: 20px;
-    border: 5px solid #f3f3f3; /* Light grey */
-    border-top: 5px solid #3498db; /* Blue */
-    border-radius: 50%;
-    animation: spin 1s linear infinite;
-    margin: 0 auto;
+  display: none;
+  width: 20px;
+  height: 20px;
+  border: 5px solid #f3f3f3; /* Light grey */
+  border-top: 5px solid #3498db; /* Blue */
+  border-radius: 50%;
+  animation: spin 1s linear infinite;
+  margin: 0 auto;
 }
 
 @keyframes spin {
-    0% { transform: rotate(0deg); }
-    100% { transform: rotate(360deg); }
+  0% {
+    transform: rotate(0deg);
+  }
+  100% {
+    transform: rotate(360deg);
+  }
 }
 
-
 @media (max-width: 500px) {
- .sub-sec {
+  input[type="email"] {
+    border-radius: 5px;
+    width: 100%;
+  }
+  .sub-sec {
     padding: 10px;
     width: 90%;
   }
   h1 {
     font-size: 25px;
   }
-  .button-cont{
+  .button-cont {
     display: flex;
     flex-direction: column;
     row-gap: 0.5em;
   }
-  .dateTime{
+  .dateTime {
     font-size: 16px;
   }
-  p{
+  p {
     font-size: 1em;
   }
 }
 @media (max-width: 400px) {
+  input[type="email"] {
+    border-radius: 5px;
+    width: 100%;
+  }
   section > div {
     padding: 10px;
     width: 90%;
@@ -159,15 +165,15 @@ button:hover {
   h1 {
     font-size: 20px;
   }
-  .button-cont{
+  .button-cont {
     display: flex;
     flex-direction: column;
     row-gap: 0.5em;
   }
-  .dateTime{
+  .dateTime {
     font-size: 14px;
   }
-  p{
+  p {
     font-size: 1em;
   }
 }
